<resources>
    <string name="app_name">Converted Cash</string>
    <string name="loading">loading progress bar</string>
    <string name="btn_convert">button convert</string>
    <string name="bitcoin_name">Bitcoin</string>
    <string name="bitcoin_short_name">BTC</string>
    <string name="bitcoin_price">$64,194.00</string>
    <string name="btn_back">btn back</string>
    <string name="enter_amount">100</string>
</resources>