<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dp10"
    android:background="@drawable/background_item_currency">

    <ImageView
        android:id="@+id/image_currency"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/bitcoin_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name_currency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:contentDescription="@string/app_name"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/bitcoin_name"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/short_name_currency"
        app:layout_constraintStart_toEndOf="@+id/image_currency"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/short_name_currency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:contentDescription="@string/app_name"
        android:fontFamily="@font/montserrat_light"
        android:text="@string/bitcoin_short_name"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/image_currency" />

    <ImageView
        android:id="@+id/image_chart_currency"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/bitcoin_chart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/price_currency"
        app:layout_constraintStart_toEndOf="@+id/name_currency"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/price_currency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:contentDescription="@string/app_name"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/bitcoin_price"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>